vlib/v/checker/tests/passing_expr_to_fn_expecting_voidptr.out
vlib/v/checker/tests/passing_expr_to_fn_expecting_voidptr.vv:3:31: error: expression cannot be passed as `voidptr`
    1 | import strconv
    2 | 
    3 | strconv.v_printf('%02.02f\n', 1.1)
      |                               ~~~
