vlib/v/checker/tests/passing_expr_to_fn_expecting_voidptr.vv
import strconv

strconv.v_printf('%02.02f\n', 1.1)
